# docs/swagger.json
@@ -21,6 +21,56 @@
                 "responses": {}
             }
         },
+        "/api/v1/docker/container/{id}": {
+            "get": {
+                "description": "Get list docker container",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Docker"
+                ],
+                "summary": "Get list docker container",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of container",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/api/v1/docker/container/{id}/stream_logs": {
+            "get": {
+                "description": "Stream docker container logs",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Docker"
+                ],
+                "summary": "Stream docker container logs",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID of container",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/api/v1/login": {
             "post": {
                 "description": "Login",
@@ -53,14 +103,14 @@
         "models.LoginForm": {
             "type": "object",
             "required": [
-                "email",
-                "password"
+                "password",
+                "username"
             ],
             "properties": {
-                "email": {
+                "password": {
                     "type": "string"
                 },
-                "password": {
+                "username": {
                     "type": "string"
                 }
             }
